完整首页登录注册加非完整列表页

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -19,12 +19,12 @@ main .container #tap h4 {
 }
 
 main .container #tap h4.lgg {
-  border-bottom: 2px solid #0094FF;
+  border-bottom: 2px solid red;
 }
 
 main .container #tap h4 i {
   border: 7px solid transparent;
-  border-bottom: 7px solid #0094FF;
+  border-bottom: 7px solid red;
   position: absolute;
   left: 50%;
   top: 28px;
