--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,12 +14,12 @@
                     text-align:center;
                     position:relative;
                     &.lgg{
-                         border-bottom:2px solid #0094FF;
+                         border-bottom:2px solid red;
                     }
                    
                     i{
                         border:7px solid transparent;
-                        border-bottom:7px solid #0094FF;
+                        border-bottom:7px solid red;
                         position:absolute;
                         left:50%;
                         top:28px;
