--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,6 +1,6 @@
 html, body, ul, li, p, h1, h2, h3, h4, h5, h6, ol, dl, dt, dd, form, input {
   margin: 0;
-  top: 0;
+  padding: 0;
 }
 
 input, button {
